# DYFIT-Student-Manager-dioxus

./: Cargo.toml  Dioxus.toml  build.rs  seed.py
assets/: tailwind.css
src/: main.rs  models.rs  my_app.rs  views.rs
src/components/: datatable.rs  filter.rs  mod.rs  searchbar.rs  sidebar.rs
