[package]
name = "BudoDB"
version = "0.1.0-alpha"
authors = ["Diego <diegogoitiazx1@gmail.com>"]
edition = "2021"
homepage = "https://diegogoitia-dev.onrender.com"
description = "BudoDB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.6", features = ["router"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4.44"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[build-dependencies]
winres = "0.1"
